--- a/SINO.html
+++ b/SINO.html
@@ -8,5 +8,9 @@
         I am a Child of God
         <h1>MFM ia a Deliverance Church</h1>
         <link rel="stylesheet" href="CHI.css">
+        <h2>ROCK OF AGES</h2>
+        Jesus Christ is the Rock of AGES
+        He had Delivered me from Sin and Sorrow
+        I will forever Praise HIS Name
     </body>
 </html>
