--- a/SINO.html
+++ b/SINO.html
@@ -11,6 +11,7 @@
         <h2>ROCK OF AGES</h2>
         Jesus Christ is the Rock of AGES
         He had Delivered me from Sin and Sorrow
+    Where is the LORD GOD of Elijah
         I will forever Praise HIS Name
     </body>
 </html>
